# mouse_interarivo

./: HandTracking.py  README.md  gestureControl.py  main.py  pyproject.toml  utils.py
