[tool.poetry]
name = "mouse-interarivo"
version = "0.1.0"
description = ""
authors = ["Nathan Souza <naathanmarinho11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
numpy = "^2.0.0"
mediapipe = "^0.10.14"
PyAutoGUI = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
